Closes #2563 - add handling of permissions as access ids
Co-authored-by: SebastianRoseneck <55637012+SebastianRoseneck@users.noreply.github.com>
Co-authored-by: ryzheboka <025465835+ryzheboka@users.noreply.github.com>